--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="jndex.css">
         <!-- <link rel="stylesheet" href="index.scss"> -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
